--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <h1>Follow Me Game</h1>
     <h2>Press any key to start the game</h2>
+    <button id="startBtn">Start Game</button>
+
 
     <div class="btn-container">
         <div class="line-one">
