--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 </head>
 <body>
     <h1>Follow Me Game</h1>
-    <h2>Press any key to start the game</h2>
+    <h2>Press Start Key</h2>
     <button id="startBtn">Start Game</button>
-
-
+<div class="game-container">
     <div class="btn-container">
         <div class="line-one">
             <div class="btn red" type="button" id="red">1</div>
@@ -21,7 +20,7 @@
             <div class="btn green" type="button" id="green">3</div>
             <div class="btn purple" type="button" id="purple">4</div>
         </div>
-       
+</div>      
     </div>
   <script src="app.js"></script>
 </body>
